--- a/pro_home.html
+++ b/pro_home.html
@@ -145,7 +145,7 @@
             <a href="#" class="btn">add to card</a>
           </div>
           <div class="box">
-            <img src="/IMAGES/vegetable.jpg" alt="" />
+            <img src="/IMAGES/capsicum.webp" alt="" />
             <h1>VEGETABLES</h1>
             <div class="price">৳200/- - ৳400/-</div>
             <div class="starts">
@@ -158,7 +158,137 @@
             <a href="#" class="btn">add to card</a>
           </div>
           <div class="box">
-            <img src="/IMAGES/all.jpg" alt="" />
+            <img src="/IMAGES/misti kumra.webp" alt="" />
+            <h1>COMBO</h1>
+            <div class="price">৳200/- - ৳400/-</div>
+            <div class="starts">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star-half"></i>
+            </div>
+            <a href="#" class="btn">add to card</a>
+          </div>
+          <div class="box">
+            <img src="/IMAGES/jali-kumra.webp" alt="" />
+            <h1>COMBO</h1>
+            <div class="price">৳200/- - ৳400/-</div>
+            <div class="starts">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star-half"></i>
+            </div>
+            <a href="#" class="btn">add to card</a>
+          </div>
+          <div class="box">
+            <img src="/IMAGES/onion.avif" alt="" />
+            <h1>COMBO</h1>
+            <div class="price">৳200/- - ৳400/-</div>
+            <div class="starts">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star-half"></i>
+            </div>
+            <a href="#" class="btn">add to card</a>
+          </div>
+          <div class="box">
+            <img src="/IMAGES/kakrol.webp" alt="" />
+            <h1>COMBO</h1>
+            <div class="price">৳200/- - ৳400/-</div>
+            <div class="starts">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star-half"></i>
+            </div>
+            <a href="#" class="btn">add to card</a>
+          </div>
+          <div class="box">
+            <img src="/IMAGES/Gojor.webp" alt="" />
+            <h1>COMBO</h1>
+            <div class="price">৳200/- - ৳400/-</div>
+            <div class="starts">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star-half"></i>
+            </div>
+            <a href="#" class="btn">add to card</a>
+          </div>
+          <div class="box">
+            <img src="/IMAGES/corola.webp" alt="" />
+            <h1>COMBO</h1>
+            <div class="price">৳200/- - ৳400/-</div>
+            <div class="starts">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star-half"></i>
+            </div>
+            <a href="#" class="btn">add to card</a>
+          </div>
+          <div class="box">
+            <img src="/IMAGES/kagozilebu.webp" alt="" />
+            <h1>COMBO</h1>
+            <div class="price">৳200/- - ৳400/-</div>
+            <div class="starts">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star-half"></i>
+            </div>
+            <a href="#" class="btn">add to card</a>
+          </div>
+          <div class="box">
+            <img src="/IMAGES/tomato.avif" alt="" />
+            <h1>COMBO</h1>
+            <div class="price">৳200/- - ৳400/-</div>
+            <div class="starts">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star-half"></i>
+            </div>
+            <a href="#" class="btn">add to card</a>
+          </div>
+          <div class="box">
+            <img src="/IMAGES/mula.webp" alt="" />
+            <h1>COMBO</h1>
+            <div class="price">৳200/- - ৳400/-</div>
+            <div class="starts">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star-half"></i>
+            </div>
+            <a href="#" class="btn">add to card</a>
+          </div>
+          <div class="box">
+            <img src="/IMAGES/badacopy.webp" alt="" />
+            <h1>COMBO</h1>
+            <div class="price">৳200/- - ৳400/-</div>
+            <div class="starts">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star-half"></i>
+            </div>
+            <a href="#" class="btn">add to card</a>
+          </div>
+          <div class="box">
+            <img src="/IMAGES/misti kumra.webp" alt="" />
             <h1>COMBO</h1>
             <div class="price">৳200/- - ৳400/-</div>
             <div class="starts">
