--- a/pro_home.html
+++ b/pro_home.html
@@ -88,7 +88,7 @@
           <a href="#" class="btn">Read More</a>
         </div>
         <div class="box">
-          <img src="IMAGES/Payment.jpg" alt="" style="max-height:14.5rem" />
+          <img src="IMAGES/Payment.jpg" alt="" style="max-height: 14.5rem" />
           <h3>Online Payment</h3>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum
@@ -106,7 +106,7 @@
       <div class="product-slider">
         <div class="default-carousal">
           <div class="box">
-            <img src="/IMAGES/chicken.jpg" alt="" />
+            <img src="/IMAGES/boiler_cd.webp" alt="" />
             <h1>Chicken</h1>
             <div class="price">৳200/- - ৳400/-</div>
             <div class="starts">
@@ -119,7 +119,7 @@
             <a href="#" class="btn">add to card</a>
           </div>
           <div class="box">
-            <img src="/IMAGES/meat_appl.webp" alt="" />
+            <img src="/IMAGES/meat_cd.webp" alt="" />
             <h1>MEAT</h1>
             <div class="price">৳ 200/- - ৳400/-</div>
             <div class="starts">
@@ -132,11 +132,10 @@
             <a href="#" class="btn">add to card</a>
           </div>
           <div class="box">
-            <img src="/IMAGES/milk.jpg" alt="" />
+            <img src="/IMAGES/milk_cd.webp" alt="" />
             <h1>MILK</h1>
             <div class="price">৳200/- - ৳400/-</div>
             <div class="starts">
-              <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
