After adding footer section

--- a/pro_home.html
+++ b/pro_home.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="CSS/all.min.css" />
     <link rel="stylesheet" href="CSS/fontawesome.min.css" />
     <link rel="stylesheet" href="CSS/pro_home.css" />
+    <link rel="stylesheet" href="CSS/footer.css">
     <title>Document</title>
   </head>
   <body>
@@ -120,7 +121,7 @@
           </div>
           <div class="box">
             <img src="/IMAGES/meat_cd.webp" alt="" />
-            <h1>MEAT</h1>
+            <h1>Meat</h1>
             <div class="price">৳ 200/- - ৳400/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
@@ -133,7 +134,7 @@
           </div>
           <div class="box">
             <img src="/IMAGES/milk_cd.webp" alt="" />
-            <h1>MILK</h1>
+            <h1>Fresh Milk</h1>
             <div class="price">৳200/- - ৳400/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
@@ -145,7 +146,7 @@
           </div>
           <div class="box">
             <img src="/IMAGES/capsicum.webp" alt="" />
-            <h1>VEGETABLES</h1>
+            <h1>Capsicum</h1>
             <div class="price">৳200/- - ৳400/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
@@ -158,7 +159,7 @@
           </div>
           <div class="box">
             <img src="/IMAGES/misti kumra.webp" alt="" />
-            <h1>COMBO</h1>
+            <h1>Misti Kumra</h1>
             <div class="price">৳200/- - ৳400/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
@@ -171,7 +172,7 @@
           </div>
           <div class="box">
             <img src="/IMAGES/jali-kumra.webp" alt="" />
-            <h1>COMBO</h1>
+            <h1>Jali Kumra</h1>
             <div class="price">৳200/- - ৳400/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
@@ -184,7 +185,7 @@
           </div>
           <div class="box">
             <img src="/IMAGES/onion.avif" alt="" />
-            <h1>COMBO</h1>
+            <h1>Onion</h1>
             <div class="price">৳200/- - ৳400/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
@@ -197,7 +198,7 @@
           </div>
           <div class="box">
             <img src="/IMAGES/kakrol.webp" alt="" />
-            <h1>COMBO</h1>
+            <h1>Kakrol</h1>
             <div class="price">৳200/- - ৳400/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
@@ -210,7 +211,7 @@
           </div>
           <div class="box">
             <img src="/IMAGES/Gojor.webp" alt="" />
-            <h1>COMBO</h1>
+            <h1>Gajor</h1>
             <div class="price">৳200/- - ৳400/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
@@ -223,7 +224,7 @@
           </div>
           <div class="box">
             <img src="/IMAGES/corola.webp" alt="" />
-            <h1>COMBO</h1>
+            <h1>Corola</h1>
             <div class="price">৳200/- - ৳400/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
@@ -236,7 +237,7 @@
           </div>
           <div class="box">
             <img src="/IMAGES/kagozilebu.webp" alt="" />
-            <h1>COMBO</h1>
+            <h1>Kagozi Lebu</h1>
             <div class="price">৳200/- - ৳400/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
@@ -249,7 +250,7 @@
           </div>
           <div class="box">
             <img src="/IMAGES/tomato.avif" alt="" />
-            <h1>COMBO</h1>
+            <h1>Tomato</h1>
             <div class="price">৳200/- - ৳400/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
@@ -262,7 +263,7 @@
           </div>
           <div class="box">
             <img src="/IMAGES/mula.webp" alt="" />
-            <h1>COMBO</h1>
+            <h1>Mula</h1>
             <div class="price">৳200/- - ৳400/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
@@ -275,7 +276,7 @@
           </div>
           <div class="box">
             <img src="/IMAGES/badacopy.webp" alt="" />
-            <h1>COMBO</h1>
+            <h1>Badacopy</h1>
             <div class="price">৳200/- - ৳400/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
@@ -288,14 +289,13 @@
           </div>
           <div class="box">
             <img src="/IMAGES/misti kumra.webp" alt="" />
-            <h1>COMBO</h1>
+            <h1>Misti Kumra</h1>
             <div class="price">৳200/- - ৳400/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
-              <i class="fa fa-star-half"></i>
             </div>
             <a href="#" class="btn">add to card</a>
           </div>
@@ -303,6 +303,52 @@
       </div>
     </section>
     <!-- product section -->
+
+    <!-- footer section -->
+    <!-- footer section styling is in separate css file called footer.css -->
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="footer-col">
+            <h4>Company</h4>
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Our services</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Affiliate Program</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Get help</h4>
+            <ul>
+              <li><a href="#">FAG</a></li>
+              <li><a href="#">Shippin</a></li>
+              <li><a href="#">returns</a></li>
+              <li><a href="#">Payment Option</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Quick Link</h4>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Feature</a></li>
+              <li><a href="#">Products</a></li>
+              <li><a href="#">Review</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Follow Us</h4>
+            <div class="social-link">
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- footer section -->
     <script src="/JS/search.js"></script>
   </body>
 </html>
