--- a/Sign_up.html
+++ b/Sign_up.html
@@ -23,7 +23,7 @@
         <button type="button" class="sign-up-btn"> Sign Up  <i class="fa-sharp fa-solid fa-user-plus fa-beat"></i></i></button>
         <hr><p class="or">OR</p>
         <button type="button" class="gog-btn">Login with Google <i class="fa-brands fa-google fa-beat-fade" style="color: #0f8f58;"></i></button>
-        <p>Do you have an account? <a href="#login-form">Sign In</a>
+        <p>Do you have an account? <a href="pro_home.html">Sign In</a>
         </p>
       </form>
     </div>
