--- a/pro_home.html
+++ b/pro_home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="CSS/all.min.css" />
     <link rel="stylesheet" href="CSS/fontawesome.min.css" />
     <link rel="stylesheet" href="CSS/pro_home.css" />
-    <link rel="stylesheet" href="CSS/footer.css">
+    <link rel="stylesheet" href="CSS/footer.css" />
     <title>Document</title>
   </head>
   <body>
@@ -55,12 +55,7 @@
       <div class="content">
         <h3>Fresh And <span>Organic</span> Products For Your</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, iusto
-          ab. Maiores quia ut perferendis reiciendis totam obcaecati placeat
-          nulla non quaerat quibusdam! Voluptate aliquid similique veritatis
-          nihil quasi a rem ex pariatur perferendis itaque sunt voluptatem, modi
-          iste quisquam accusamus omnis animi autem provident dolorem ducimus?
-          Et, in odio.
+          Introducing FreshMart, your premier online grocery shop for farm-fresh produce and quality meats. From crisp vegetables to succulent meats and tender chicken, we bring the finest ingredients to your doorstep. Shop conveniently and enjoy the goodness of freshness without leaving your home.
         </p>
         <a href="" class="btn">Shop Now</a>
       </div>
@@ -81,7 +76,7 @@
         </div>
         <div class="box">
           <img src="IMAGES/delivery.jpg" alt="" />
-          <h3>Free Delivery</h3>
+          <h3>Home Delivery</h3>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum
             nemo nulla quo recusandae cum quidem!
@@ -109,7 +104,8 @@
           <div class="box">
             <img src="/IMAGES/boiler_cd.webp" alt="" />
             <h1>Chicken</h1>
-            <div class="price">৳200/- - ৳400/-</div>
+            <h4>1kg</h4>
+            <div class="price">৳299/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -122,7 +118,8 @@
           <div class="box">
             <img src="/IMAGES/meat_cd.webp" alt="" />
             <h1>Meat</h1>
-            <div class="price">৳ 200/- - ৳400/-</div>
+            <h4>1kg</h4>
+            <div class="price">৳800/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -135,7 +132,8 @@
           <div class="box">
             <img src="/IMAGES/milk_cd.webp" alt="" />
             <h1>Fresh Milk</h1>
-            <div class="price">৳200/- - ৳400/-</div>
+            <h4>500gm</h4>
+            <div class="price">৳290/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -147,7 +145,8 @@
           <div class="box">
             <img src="/IMAGES/capsicum.webp" alt="" />
             <h1>Capsicum</h1>
-            <div class="price">৳200/- - ৳400/-</div>
+            <h4>250gm</h4>
+            <div class="price">৳60/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -160,7 +159,8 @@
           <div class="box">
             <img src="/IMAGES/misti kumra.webp" alt="" />
             <h1>Misti Kumra</h1>
-            <div class="price">৳200/- - ৳400/-</div>
+            <h4>1kg</h4>
+            <div class="price">৳35/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -173,7 +173,8 @@
           <div class="box">
             <img src="/IMAGES/jali-kumra.webp" alt="" />
             <h1>Jali Kumra</h1>
-            <div class="price">৳200/- - ৳400/-</div>
+            <h4>1kg</h4>
+            <div class="price">৳45/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -184,9 +185,10 @@
             <a href="#" class="btn">add to card</a>
           </div>
           <div class="box">
-            <img src="/IMAGES/onion.avif" alt="" />
-            <h1>Onion</h1>
-            <div class="price">৳200/- - ৳400/-</div>
+            <img src="/IMAGES/onion_cd.webp" alt="" />
+            <h1>Peyaj</h1>
+            <h4>1kg</h4>
+            <div class="price">৳65/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -199,7 +201,8 @@
           <div class="box">
             <img src="/IMAGES/kakrol.webp" alt="" />
             <h1>Kakrol</h1>
-            <div class="price">৳200/- - ৳400/-</div>
+            <h4>1kg</h4>
+            <div class="price">৳55/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -212,7 +215,8 @@
           <div class="box">
             <img src="/IMAGES/Gojor.webp" alt="" />
             <h1>Gajor</h1>
-            <div class="price">৳200/- - ৳400/-</div>
+            <h4>500gm</h4>
+            <div class="price">৳40/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -225,7 +229,8 @@
           <div class="box">
             <img src="/IMAGES/corola.webp" alt="" />
             <h1>Corola</h1>
-            <div class="price">৳200/- - ৳400/-</div>
+            <h4>500gm</h4>
+            <div class="price">৳45/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -238,7 +243,8 @@
           <div class="box">
             <img src="/IMAGES/kagozilebu.webp" alt="" />
             <h1>Kagozi Lebu</h1>
-            <div class="price">৳200/- - ৳400/-</div>
+            <h4>12pcs</h4>
+            <div class="price">৳80/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -251,7 +257,8 @@
           <div class="box">
             <img src="/IMAGES/tomato.avif" alt="" />
             <h1>Tomato</h1>
-            <div class="price">৳200/- - ৳400/-</div>
+            <h4>1kg</h4>
+            <div class="price">৳40/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -264,7 +271,8 @@
           <div class="box">
             <img src="/IMAGES/mula.webp" alt="" />
             <h1>Mula</h1>
-            <div class="price">৳200/- - ৳400/-</div>
+            <h4>500gm</h4>
+            <div class="price">৳25/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -277,7 +285,8 @@
           <div class="box">
             <img src="/IMAGES/badacopy.webp" alt="" />
             <h1>Badacopy</h1>
-            <div class="price">৳200/- - ৳400/-</div>
+            <h4>1kg</h4>
+            <div class="price">৳35/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -290,7 +299,8 @@
           <div class="box">
             <img src="/IMAGES/misti kumra.webp" alt="" />
             <h1>Misti Kumra</h1>
-            <div class="price">৳200/- - ৳400/-</div>
+            <h4>1kg</h4>
+            <div class="price">৳43/-</div>
             <div class="starts">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
