--- a/pro_home.html
+++ b/pro_home.html
@@ -113,7 +113,7 @@
               <i class="fa fa-star"></i>
               <i class="fa fa-star-half"></i>
             </div>
-            <a href="#" class="btn">add to card</a>
+            <a href="#" class="btn">add to cart</a>
           </div>
           <div class="box">
             <img src="/IMAGES/meat_cd.webp" alt="" />
@@ -127,7 +127,7 @@
               <i class="fa fa-star"></i>
               <i class="fa fa-star-half"></i>
             </div>
-            <a href="#" class="btn">add to card</a>
+            <a href="#" class="btn">add to cart</a>
           </div>
           <div class="box">
             <img src="/IMAGES/milk_cd.webp" alt="" />
@@ -140,7 +140,7 @@
               <i class="fa fa-star"></i>
               <i class="fa fa-star-half"></i>
             </div>
-            <a href="#" class="btn">add to card</a>
+            <a href="#" class="btn">add to cart</a>
           </div>
           <div class="box">
             <img src="/IMAGES/capsicum.webp" alt="" />
@@ -154,7 +154,7 @@
               <i class="fa fa-star"></i>
               <i class="fa fa-star-half"></i>
             </div>
-            <a href="#" class="btn">add to card</a>
+            <a href="#" class="btn">add to cart</a>
           </div>
           <div class="box">
             <img src="/IMAGES/misti kumra.webp" alt="" />
@@ -168,7 +168,7 @@
               <i class="fa fa-star"></i>
               <i class="fa fa-star-half"></i>
             </div>
-            <a href="#" class="btn">add to card</a>
+            <a href="#" class="btn">add to cart</a>
           </div>
           <div class="box">
             <img src="/IMAGES/jali-kumra.webp" alt="" />
@@ -182,7 +182,7 @@
               <i class="fa fa-star"></i>
               <i class="fa fa-star-half"></i>
             </div>
-            <a href="#" class="btn">add to card</a>
+            <a href="#" class="btn">add to cart</a>
           </div>
           <div class="box">
             <img src="/IMAGES/onion_cd.webp" alt="" />
@@ -196,7 +196,7 @@
               <i class="fa fa-star"></i>
               <i class="fa fa-star-half"></i>
             </div>
-            <a href="#" class="btn">add to card</a>
+            <a href="#" class="btn">add to cart</a>
           </div>
           <div class="box">
             <img src="/IMAGES/kakrol.webp" alt="" />
@@ -210,7 +210,7 @@
               <i class="fa fa-star"></i>
               <i class="fa fa-star-half"></i>
             </div>
-            <a href="#" class="btn">add to card</a>
+            <a href="#" class="btn">add to cart</a>
           </div>
           <div class="box">
             <img src="/IMAGES/Gojor.webp" alt="" />
@@ -224,7 +224,7 @@
               <i class="fa fa-star"></i>
               <i class="fa fa-star-half"></i>
             </div>
-            <a href="#" class="btn">add to card</a>
+            <a href="#" class="btn">add to cart</a>
           </div>
           <div class="box">
             <img src="/IMAGES/corola.webp" alt="" />
@@ -238,7 +238,7 @@
               <i class="fa fa-star"></i>
               <i class="fa fa-star-half"></i>
             </div>
-            <a href="#" class="btn">add to card</a>
+            <a href="#" class="btn">add to cart</a>
           </div>
           <div class="box">
             <img src="/IMAGES/kagozilebu.webp" alt="" />
@@ -252,7 +252,7 @@
               <i class="fa fa-star"></i>
               <i class="fa fa-star-half"></i>
             </div>
-            <a href="#" class="btn">add to card</a>
+            <a href="#" class="btn">add to cart</a>
           </div>
           <div class="box">
             <img src="/IMAGES/tomato.avif" alt="" />
@@ -266,7 +266,7 @@
               <i class="fa fa-star"></i>
               <i class="fa fa-star-half"></i>
             </div>
-            <a href="#" class="btn">add to card</a>
+            <a href="#" class="btn">add to cart</a>
           </div>
           <div class="box">
             <img src="/IMAGES/mula.webp" alt="" />
@@ -280,7 +280,7 @@
               <i class="fa fa-star"></i>
               <i class="fa fa-star-half"></i>
             </div>
-            <a href="#" class="btn">add to card</a>
+            <a href="#" class="btn">add to cart</a>
           </div>
           <div class="box">
             <img src="/IMAGES/badacopy.webp" alt="" />
@@ -294,7 +294,7 @@
               <i class="fa fa-star"></i>
               <i class="fa fa-star-half"></i>
             </div>
-            <a href="#" class="btn">add to card</a>
+            <a href="#" class="btn">add to cart</a>
           </div>
           <div class="box">
             <img src="/IMAGES/misti kumra.webp" alt="" />
@@ -307,7 +307,7 @@
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
             </div>
-            <a href="#" class="btn">add to card</a>
+            <a href="#" class="btn">add to cart</a>
           </div>
         </div>
       </div>
